# computer-vision-mlops

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_CHECKLIST.md  GUIDE.md  PROJECT.md  QUICKSTART.md  README.md  README.roboflow.txt  SECURITY.md  SETUP.md  config.yaml  docker-compose.yml  flask_app.py  initialize_git.ps1  initialize_git.sh  mlops_pipeline.py  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt  streamlit_app.py  train_demo.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
api/templates/: index.html
models/: demo_metrics.json  demo_model.pkl
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb
src/: __init__.py
src/data/: data_loader.py  data_preprocessing.py
src/features/: feature_extractor.py
src/models/: evaluate.py  predict.py  train.py
src/utils/: config.py  helpers.py  logger.py
src/visualization/: visualize.py
test/: _annotations.txt
tests/: conftest.py  test_data_loader.py  test_flask_api.py  test_inference.py  test_model_training.py  test_preprocessing.py  test_utils.py
train/: _annotations.txt
valid/: _annotations.txt
