[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computer-vision-mlops"
version = "1.0.0"
description = "Production-ready computer vision pipeline with MLOps best practices"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Muhammad Farooq", email = "mfarooqshafee333@gmail.com" }]
requires-python = ">=3.9"
keywords = ["computer-vision", "deep-learning", "pytorch", "flask", "mlops", "image-classification"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "Pillow>=10.0",
    "flask>=2.3",
    "flask-cors>=4.0",
    "gunicorn>=21.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.65",
    "requests>=2.31",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "flake8>=6.0",
]
gpu = [
    "torch>=2.0",
    "torchvision>=0.15",
    "torchaudio>=2.0",
    "opencv-python>=4.8",
    "albumentations>=1.3",
]

[project.urls]
Homepage = "https://github.com/Muhammad-Farooq13/computer-vision-mlops"
Repository = "https://github.com/Muhammad-Farooq13/computer-vision-mlops"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
